--- a/css/app2.css
+++ b/css/app2.css
@@ -1376,6 +1376,92 @@ object {
   word-break: break-all;
   color: #666666;
 }
+/*--------------------------------------------------------------
+Contact Section
+--------------------------------------------------------------*/
+.contact-section {
+  width: 100%;
+  background: #333;
+  padding-top: 8.75rem;
+  padding-bottom: 8.75rem;
+  position: relative;
+  z-index: 2;
+}
+.contact-section h2 {
+  color: #282828;
+  padding-bottom: 1.0625rem;
+}
+.contact-section h2:after {
+  width: 72px;
+  margin-left: -36px;
+}
+.contact-section .container .table-responsive .table thead{
+  background-color: #514F62;
+  font-size: 20px;
+  color: white;
+  border: none;
+}
+.contact-section .container .table-responsive .table tbody{
+  background-color: #514F62;
+  border: none;
+}
+.contact-section .container .table-responsive .table tbody tr{
+  color: white;
+}
+.contact-section .container .table-responsive .table tbody tr td a{
+  color: white;
+  text-align: right;
+  /*margin: 0 50px 0 0;*/
+}
+.contact-desc {
+  text-align: center;
+  color: white;
+  width: 336px;
+  margin: 2.5625rem auto 2.1875rem;
+  font-family: "Lato", sans-serif;
+  font-size: 0.875rem;
+  line-height: 19px;
+  letter-spacing: 1px;
+}
+.contact-desc em {
+  display: block;
+  font-style: normal;
+  text-decoration: underline;
+}
+
+/*--------------------------------------------------------------
+RSVP Section
+--------------------------------------------------------------*/
+.rsvp-section {
+  width: 100%;
+  /*height: 40%;*/
+  background: #ddd;
+  padding-top: 8.75rem;
+  padding-bottom: 8.75rem;
+  position: relative;
+  z-index: 2;
+}
+.rsvp-section h2 {
+  color: black;
+  padding-bottom: 1.25rem;
+  padding-top: 1.25rem;
+  margin: 0 5% 0 0;
+}
+/*.rsvp-section p {
+  color: black;
+  font-size: 70%;
+}*/
+.rsvp-desc1 {
+  text-align: center;
+  /*float: left;*/
+  color: black;
+  width: 150px;
+  /*margin: 1.3125rem auto 3.4375rem;*/
+  font-family: "Lato", sans-serif;
+  font-size: 70%;
+  line-height: 19px;
+  letter-spacing: 1px;
+}
 
 body.search .site-header,
 body.archive .site-header {
